fix(table): removal of extra sort icon space caused by whitespace
Whitespace between column title text and the sort icon was creating a
few pixels of extra space. Adjusted markup and migration notes to avoid
space between this markup. Added new class to allow for whitespace
within the text span, and for targetting this element future changes.

--- a/components/table/index.css
+++ b/components/table/index.css
@@ -474,6 +474,10 @@ governing permissions and limitations under the License.
   }
 }
 
+.spectrum-Table-columnTitle {
+  display: inline-block;
+}
+
 .spectrum-Table-cell--alignCenter {
   text-align: center;
 }
